@@ -118,6 +118,16 @@ void json_encode_clear(t_json_encode *x, t_symbol *selector, int argcount, t_ato
 }
 
 void output_json(json_object *jobj, t_outlet *data_outlet, t_outlet *done_outlet) {
+	enum json_type outer_type = json_object_get_type(jobj);
+	enum json_type inner_type;
+	t_atom out_data[2];
+	t_float out_float;
+	char *remainder;
+	float float_value;
+	const char *string_value;
+	int array_len;
+	int i;
+	
 	if (is_error(jobj)) {
 		if (jobj != NULL) {
 			/* NULL only in json-c after 2010-12-08, see 
@@ -128,15 +138,6 @@ https://github.com/json-c/json-c/commit/a503ee8217a9912f3c58acae33cf3d1d840dab6c
 		}
 		return;
 	}
-	enum json_type outer_type = json_object_get_type(jobj);
-	enum json_type inner_type;
-	t_atom out_data[2];
-	t_float out_float;
-	char *remainder;
-	float float_value;
-	const char *string_value;
-	int array_len;
-	int i;
 
 	switch (outer_type) {
 		/* We really have a JSON object */
